--- a/v3/pose_graph/pose_graph_optimization.ipynb
+++ b/v3/pose_graph/pose_graph_optimization.ipynb
@@ -255,25 +255,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 934,
    "id": "f0c970bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[ 9.89950043e-02  1.00994994e-01 -1.91990095e-05  3.00000000e-04\n",
+      "   5.00000000e-04  2.00000000e-03]], shape=(1, 6), dtype=float64)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Zij = v2t(np.array([1.,  1.9, 0., 0.0003, 0.0005, 0.01 ])) # get from graph \n",
-    "# Xij = v2t(np.array([1.1, 2.0, 0., 0.,     0.0,    0.008])) # get from odometry message\n",
-    "Zij =  v2t(np.zeros([2,6]))\n",
-    "Xij =  v2t(np.random.randn(2,6))\n",
+    "Zij = v2t(np.array([[1.,  1.9, 0., 0.0003, 0.0005, 0.01 ]])) # get from graph \n",
+    "Xij = v2t(np.array([[1.1, 2.0, 0., 0.,     0.0,    0.008]])) # get from odometry message\n",
+    "# Zij =  v2t(np.zeros([2,6]))\n",
+    "# Xij =  v2t(np.random.randn(2,6))\n",
     "ij = np.array([[0,1],[1,2]])\n",
     "\n",
     "e = get_e(Zij, Xij)\n",
-    "# print(e)\n",
+    "print(e)\n",
     "\n",
-    "a, b = get_A_ij_B_ij(e)\n",
-    "# print(a)\n",
+    "# a, b = get_A_ij_B_ij(e)\n",
+    "# # print(a)\n",
     "\n",
-    "J = get_J(e, ij)\n",
-    "# print(J[1])"
+    "# J = get_J(e, ij)\n",
+    "# # print(J[1])"
    ]
   },
   {
@@ -314,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 721,
+   "execution_count": 1163,
    "id": "ce6d7652",
    "metadata": {},
    "outputs": [],
@@ -333,7 +343,8 @@
     "    theta = e_ij[:,4][:,None]\n",
     "    psi = e_ij[:,5][:,None]\n",
     "    \n",
-    "    eyes = tf.tile(-tf.eye(3)[None,:,:], [tf.shape(p_point)[0] , 1, 1])\n",
+    "    eyes = tf.tile(-tf.eye(3)[None,:,:], [tf.shape(p_point)[0] , 1, 1]) #was this\n",
+    "#     eyes = tf.tile(tf.eye(3)[None,:,:], [tf.shape(p_point)[0] , 1, 1]) #test\n",
     "    \n",
     "#     deriv of R() wrt phi\n",
     "    dRdPhi = tf.Variable([[tf.zeros(len(phi), dtype = phi.dtype)[:,None], (-sin(psi)*sin(phi) + cos(phi)*sin(theta)*cos(psi)), (cos(phi)*sin(psi) + sin(theta)*sin(phi)*cos(psi))],\n",
@@ -357,9 +368,14 @@
     "    Jz = dRdPsi @ p_point[:,:,None]\n",
     "    \n",
     "    top = tf.concat([eyes, Jx, Jy, Jz], axis = 2)\n",
-    "    flipped = tf.concat([tf.transpose(Jx, (0,2,1)), \n",
-    "                         tf.transpose(Jy, (0,2,1)), \n",
-    "                         tf.transpose(Jz, (0,2,1))], axis = 1)\n",
+    "    #was this\n",
+    "#     flipped = tf.concat([tf.transpose(Jx, (0,2,1)), \n",
+    "#                          tf.transpose(Jy, (0,2,1)), \n",
+    "#                          tf.transpose(Jz, (0,2,1))], axis = 1)\n",
+    "    flipped = tf.transpose(tf.concat([Jx, Jy, Jz], axis = 2), (0,2,1)) #test\n",
+    "#     print(flipped[0])\n",
+    "#     print(top[0])\n",
+    "    \n",
     "    bottom = tf.concat([flipped, eyes], axis = 2) #was this\n",
     "#     bottom = tf.concat([-flipped, -eyes], axis = 2) #test\n",
     "    A_ij = tf.concat([top, bottom], axis = 1) #was this\n",
@@ -373,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 708,
+   "execution_count": 1147,
    "id": "3cea8ad6",
    "metadata": {},
    "outputs": [],
@@ -407,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 709,
+   "execution_count": 1148,
    "id": "eee31e2a",
    "metadata": {},
    "outputs": [],
@@ -415,13 +431,14 @@
     "# # ij = tf.constant(odometry_history[1:3,6:].astype(int))\n",
     "# ij = np.array([[1,3],\n",
     "#                [0,2]])\n",
-    "# # print(ij)\n",
+    "# print(ij)\n",
     "# # print(np.max(ij))\n",
     "# # print(\"e: \\n\", e)\n",
     "\n",
     "# J = get_J(e, ij)  \n",
-    "# # print(\"\\n J \\n\",J[0])\n",
-    "# # print(\"\\n J \\n\",tf.shape(J),  \"\\n\", np.around(J.numpy(), 3))"
+    "# print(\"\\n J \\n\",J[-1])\n",
+    "# print(\"\\n J \\n\",tf.shape(J))  \n",
+    "# # print(\"\\n\", np.around(J.numpy(), 3))"
    ]
   },
   {
@@ -447,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 710,
+   "execution_count": 1149,
    "id": "c29ab330",
    "metadata": {},
    "outputs": [],
@@ -462,8 +479,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 711,
-   "id": "5ba9c56b",
+   "execution_count": 1150,
+   "id": "60686e10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,8 +494,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 712,
-   "id": "acf432cf",
+   "execution_count": 1151,
+   "id": "5b4a7352",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,8 +540,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 713,
-   "id": "64e8fd39",
+   "execution_count": 1152,
+   "id": "8f91caea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,15 +551,13 @@
     "    H = tf.math.reduce_sum(H_ij, axis = 0)\n",
     "    constrain_11 = tf.pad(tf.eye(6), [[0,len(H)-6],[0,len(H)-6]])\n",
     "    H = H + constrain_11    \n",
-    "    \n",
     "#     H = tf.convert_to_tensor(np.tril(H.numpy()).T + np.tril(H.numpy(),-1)) #forces H to be symmetric\n",
-    "    \n",
     "    return H"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "af552501",
+   "id": "8bfaf81f",
    "metadata": {},
    "source": [
     "# Convert between $X$ and $x$\n",
@@ -564,33 +579,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 725,
-   "id": "f3091b13",
+   "execution_count": 1153,
+   "id": "cfb310be",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_X(x, ij):\n",
     "    \"\"\"given x, a list of global poses, this function returns \n",
     "       the relative transformations X, that describe the same relationships described by the constraints z\n",
-    "\n",
     "       x  -> global poses of each transpose\n",
     "       ij -> indices of first and second element of x being considered\n",
     "       \"\"\"\n",
     "    #get transform of fist elements in each pair, ordered by how they appear in ij\n",
     "    first_vec = tf.gather(x, ij[:,0])\n",
     "    second_vec = tf.gather(x, ij[:,1])\n",
-    "    difference = first_vec - second_vec\n",
+    "#     difference = first_vec - second_vec #was this (wrong?)\n",
+    "    difference = second_vec - first_vec\n",
     "    #linearize differnce using euler angles\n",
     "    X = v2t(tf.cast(difference, tf.double))    \n",
     "    return X\n",
     "\n",
     "# X_test = get_X(x, ij)\n",
-    "# # print(X_test)"
+    "# print(X_test)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9fb6e71b",
+   "id": "29f133b0",
    "metadata": {},
    "source": [
     "# Solve the Linear System \n",
@@ -603,30 +618,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 723,
+   "execution_count": 1154,
    "id": "de8e65ff",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odometry history: \n",
+      " [[0.5  0.25 0.05 0.   0.   0.  ]\n",
+      " [0.5  0.25 0.05 0.   0.   0.  ]\n",
+      " [0.5  0.25 0.05 0.   0.   0.  ]\n",
+      " [0.5  0.25 0.05 0.   0.   0.  ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "odometry_history = np.load(\"test_data/leddartech_pixset/T_vec_history.npy\")[5:15,:] #Load test data\n",
-    "# print(odometry_history)\n",
-    "pred_stds_history = np.load(\"test_data/leddartech_pixset/cov_vec_history.npy\")[5:15,:]\n",
-    "ij = get_ij(odometry_history[:,6:].astype(np.int32))\n",
+    "# # test data generated from LeddarTech PixSet trajectory-----------------------------------\n",
+    "# odometry_history = np.load(\"test_data/leddartech_pixset/T_vec_history.npy\")[5:15,:]\n",
+    "# pred_stds_history = np.load(\"test_data/leddartech_pixset/cov_vec_history.npy\")[5:15,:]\n",
+    "# ij = get_ij(odometry_history[:,6:].astype(np.int32))\n",
+    "# #-----------------------------------------------------------------------------------------\n",
+    "\n",
+    "# simplified test data--------------------------------------------------------------------\n",
+    "# odometry_history = np.tile(np.array([0.5, 0.25, 0.05, 0.0001, 0.0002, 0.0003]), (4,1))\n",
+    "odometry_history = np.tile(np.array([0.5, 0.25, 0.05, 0.0, 0.0, 0.0]), (4,1))\n",
+    "pred_stds_history = np.tile(np.array([[0.01, 0.01, 0.01, 1e-4, 1e-4, 1e-4]]), (len(odometry_history),1))\n",
+    "ij = np.array([[0,1], [1,2], [2,3], [3,4]])\n",
+    "#-----------------------------------------------------------------------------------------\n",
+    "print(\"odometry history: \\n\", odometry_history)\n",
+    "# print(pred_stds_history)\n",
+    "# print(ij)\n",
     "\n",
     "# constraints (from odometry measurements)\n",
     "Z =  v2t(odometry_history[:,:6])      \n",
     "# relative pose estimates (from initial configuration of graph)\n",
-    "X =  v2t(odometry_history[:,:6] + 0.01*np.ones(np.shape(odometry_history[:,:6])))\n",
+    "# X =  v2t(odometry_history[:,:6] + 0.01*np.ones(np.shape(odometry_history[:,:6])))\n",
+    "X = get_X(x, ij)\n",
     "# X =  v2t(odometry_history[:,:6]*0)\n",
     "\n",
     "e = get_e(Z, X)\n",
     "omega = get_information_matrix(pred_stds_history[:,:6])\n",
+    "# print(omega[0])\n",
     "J = get_J(e, ij)\n",
     "b = get_b(e[:,:,None], omega, J)\n",
     "H = get_H(J, omega)\n",
     "# print(\"ij: \\n\", ij)\n",
+    "# # print(\"e: \\n\", tf.shape(e))\n",
     "# print(\"e: \\n\", tf.shape(e))\n",
     "# print(\"J: \\n\", tf.shape(J))\n",
     "# print(\"omega: \\n\", tf.shape(omega))\n",
@@ -637,8 +678,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 724,
-   "id": "7416df65",
+   "execution_count": 1172,
+   "id": "00b04b3d",
    "metadata": {
     "scrolled": false
    },
@@ -648,92 +689,108 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " delta_x: \n",
-      ": [[-1.6145874  -0.81245613 -0.23935112 -0.14154446 -0.09594119  0.70031536]\n",
-      " [-1.0618135  -0.5780418  -0.04721653  0.03541899 -0.07807732  0.46795392]\n",
-      " [-0.3786347  -0.4486642   0.01295486 -0.06655431  0.09134698  0.34683454]\n",
-      " [-0.12254283  0.11549784  0.03169253  0.03910764 -0.00879556 -0.08033103]\n",
-      " [ 0.59270376  0.22626138  0.0327298   0.04057258 -0.01671172 -0.19570169]\n",
-      " [ 0.48195875  0.32983452  0.05709227  0.05637245 -0.00986033 -0.2618348 ]\n",
-      " [ 1.0249753   0.6007707   0.07723802  0.00511963  0.0772149  -0.506984  ]\n",
-      " [ 1.0778832   0.56682897  0.07481524  0.03134977  0.04095789 -0.47026747]]\n",
+      " initial global state estimates: \n",
+      " [[0.0232 0.0301 0.0119 0.     0.     0.    ]\n",
+      " [0.5573 0.2875 0.1152 0.     0.     0.    ]\n",
+      " [1.0132 0.4579 0.0836 0.     0.     0.    ]\n",
+      " [1.539  0.7475 0.1571 0.     0.     0.    ]\n",
+      " [2.0987 0.9745 0.2015 0.     0.     0.    ]]\n",
+      "\n",
+      " e: \n",
+      " [ 0.0341  0.0074  0.0534 -0.      0.     -0.    ]\n",
       "\n",
       " delta_x: \n",
-      ": [[-1.8456135  -0.8590379  -0.28690743 -0.12404335  0.03670931  0.16906762]\n",
-      " [-0.9902344   0.41309357 -0.14705086  0.55947304 -0.45311356  0.19176626]\n",
-      " [ 0.3893242  -0.8720169   0.09252739 -0.140841   -0.29574108 -1.5153847 ]\n",
-      " [-0.5765457   0.13772202  0.13005066 -0.33589816  0.59791183  1.7388077 ]\n",
-      " [-0.09963417 -0.04047966  0.00589013 -0.01581055  0.17780161 -0.6460304 ]\n",
-      " [ 0.57883453 -0.04140472  0.01066685 -0.01587296  0.07024574  0.23728943]\n",
-      " [ 0.9495132   0.51464367  0.06832546  0.03504443 -0.08982718  0.10090733]\n",
-      " [ 1.5944138   0.7476423   0.12650919  0.03773594 -0.04363298 -0.27661896]]\n",
+      ": [-0.01658955  0.00942566  0.00162168 -0.00181741  0.00105661  0.00043444]\n",
+      "\n",
+      " e: \n",
+      " [ 0.0173 -0.0355  0.0183 -0.0013  0.0001  0.002 ]\n",
       "\n",
       " delta_x: \n",
-      ": [[-0.52819824  0.01113892 -0.10942841  0.49461365 -0.5561125  -0.43737793]\n",
-      " [ 0.03875732 -0.08627319  0.03813934 -0.36146545  0.27656555 -0.41625977]\n",
-      " [ 0.56185913  0.13096619  0.08165359 -0.05131912  0.3041153   0.7262268 ]\n",
-      " [-0.40149307 -0.24217224 -0.04604721 -0.05735016 -0.24050713 -0.71170044]\n",
-      " [-0.554389   -0.2979915  -0.046368    0.02545847 -0.1727364   0.292068  ]\n",
-      " [-0.20818424 -0.04210818 -0.00221358  0.113563    0.15558514  0.07679081]\n",
-      " [ 0.38987952  0.20457596  0.03347313 -0.04671162  0.1453034  -0.6395592 ]\n",
-      " [ 0.7015753   0.32190347  0.05075893 -0.11667544  0.08767009  1.1091499 ]]\n",
+      ": [-6.1669482e-05  1.3374738e-06  7.0298891e-05 -5.9045851e-07\n",
+      "  1.2238743e-06  3.7886202e-06]\n",
+      "\n",
+      " e: \n",
+      " [ 0.0173 -0.0355  0.0182 -0.0013  0.0001  0.002 ]\n",
       "\n",
       " delta_x: \n",
-      ": [[-0.9907379  -0.38839722 -0.14197731 -0.4863968   1.0813141  -0.7194824 ]\n",
-      " [-0.41830444  0.7372589  -0.15515423  1.1423874  -0.05286407 -0.15167236]\n",
-      " [ 0.45427513 -0.92946625  0.27056885 -0.9338379  -1.1471481   0.48991394]\n",
-      " [ 0.00271034  0.09368515 -0.04956627  0.19197464 -0.67916775 -0.8700838 ]\n",
-      " [-0.16534948 -0.06341147 -0.02189837 -0.03877735  0.8856468  -0.14515972]\n",
-      " [-0.29208708 -0.08613157 -0.02285624 -0.07844085  0.16002178  1.0552143 ]\n",
-      " [ 0.88658404  0.43177152  0.0749726   0.15027058 -0.4387653   1.1909227 ]\n",
-      " [ 0.52293324  0.20474589  0.04587065  0.0528708   0.19105768 -0.8500804 ]]\n",
-      "tf.Tensor(\n",
-      "[[ 4.979137    2.0487523   0.7776643   0.25737095 -0.46596968  0.28747737]\n",
-      " [ 2.4315948  -0.4860375   0.31128228 -1.375814    0.3074894  -0.09178805]\n",
-      " [-1.0268238   2.1191812  -0.4577047   1.1925523   1.0474269  -0.04759061]\n",
-      " [ 1.0978713  -0.10473275 -0.06612971  0.16216603  0.3305586  -0.07669234]\n",
-      " [ 0.2266689   0.17562127  0.02964644 -0.01144315 -0.8740003   0.69482386]\n",
-      " [-0.56052196 -0.16019005 -0.04268931 -0.07562165 -0.37599233 -1.1074598 ]\n",
-      " [-3.250952   -1.7517619  -0.25400922 -0.14372303  0.30607417 -0.1452868 ]\n",
-      " [-3.8968055  -1.8411206  -0.29795402 -0.00528106 -0.27605268  0.48781687]], shape=(8, 6), dtype=float32)\n"
+      ": [-1.1329868e-07  5.8083998e-08  2.4364334e-07  2.3339908e-09\n",
+      " -1.9654181e-09 -1.0930762e-08]\n",
+      "\n",
+      " e: \n",
+      " [ 0.0173 -0.0355  0.0182 -0.0013  0.0001  0.002 ]\n",
+      "\n",
+      " delta_x: \n",
+      ": [-5.6842993e-09  2.2783162e-09  1.0922340e-08  8.1058715e-11\n",
+      " -1.5327828e-10 -5.9804961e-10]\n",
+      "\n",
+      " e: \n",
+      " [ 0.0173 -0.0355  0.0182 -0.0013  0.0001  0.002 ]\n",
+      "\n",
+      " delta_x: \n",
+      ": [-3.61019659e-09 -1.47819179e-09  8.30243874e-10  1.12255094e-10\n",
+      " -5.68753933e-11 -2.81211499e-10]\n",
+      "\n",
+      " final global state estimates: \n",
+      " [[ 6.53331866e-03  3.95070091e-02  1.35441730e-02 -1.81799312e-03\n",
+      "   1.05783332e-03  4.38220130e-04]\n",
+      " [ 5.23829758e-01  2.53982306e-01  8.17646682e-02 -5.20959613e-04\n",
+      "   9.90508241e-04 -1.57133443e-03]\n",
+      " [ 1.04816246e+00  4.92878616e-01  1.18557036e-01  4.15455695e-04\n",
+      "  -9.72730224e-04  1.60586950e-03]\n",
+      " [ 1.54431546e+00  7.52867818e-01  1.62405923e-01 -2.90139487e-05\n",
+      "  -2.75478495e-04  4.64884128e-04]\n",
+      " [ 2.09366918e+00  9.69468594e-01  1.96448341e-01  3.73397124e-05\n",
+      "   2.78081308e-04 -4.66170255e-04]]\n"
      ]
     }
    ],
    "source": [
     "#solve the naive way\n",
-    "\n",
     "#get constraints\n",
     "Z =  v2t(odometry_history[:,:6])   # [N, 6] -> [N, 4, 4]   \n",
-    "x = tf.zeros([tf.math.reduce_max(ij)+1,6])\n",
+    "# x = tf.zeros([tf.math.reduce_max(ij)+1,6]) #zero initial conditions\n",
+    "# nonzero initial conditions\n",
+    "x = np.zeros([5,6])\n",
+    "for i in range(len(odometry_history)+1):\n",
+    "    x[i] = np.sum(odometry_history[:i], axis = 0) + np.array([0.05,0.05,0.05,0.,0.,0.])*np.random.randn(1,6)\n",
+    "print(\"\\n initial global state estimates: \\n\", np.around(x, 4))    \n",
     "\n",
-    "for count in range(4):\n",
+    "for count in range(5):\n",
     "    #create linear system----------------------------\n",
     "    #update transformation matrix using ground new ground truth solution vector\n",
     "    X = get_X(x, ij)\n",
-    "    e = get_e(Z, X)\n",
+    "    e = get_e(Z, X) #was this\n",
+    "#     e = -get_e(Z, X) #test\n",
+    "#     print(\"\\n Z: \\n\", np.around(t2v(Z[0]), 6))\n",
+    "#     print(\"\\n X: \\n\", np.around(t2v(X[0]), 4))\n",
+    "    print(\"\\n e: \\n\", np.around(e[0], 4))\n",
+    "\n",
+    "    #TODO DEBUG: I think bug is a signage issue with my error function(?)\n",
+    "    \n",
     "    omega = get_information_matrix(pred_stds_history[:,:6])\n",
     "    J = get_J(e, ij)\n",
     "    b = get_b(e[:,:,None], omega, J)\n",
     "    H = get_H(J, omega)\n",
+    "#     print(\"\\n J[0]: \\n\", J[0])\n",
     "    #------------------------------------------------\n",
     "    \n",
     "    #solve linear system-----------------------------\n",
     "    delta_x = -tf.linalg.pinv(H) @ tf.cast(b, tf.float32)\n",
     "    #delta_x is a [N*6, 1] vector, need to reshape to same dimensions as x\n",
     "    delta_x = tf.reshape(delta_x, (-1, 6))\n",
-    "    print(\"\\n delta_x: \\n:\",delta_x.numpy())\n",
+    "    print(\"\\n delta_x: \\n:\",delta_x.numpy()[0])\n",
     "    #------------------------------------------------\n",
     "    \n",
     "    #update solution vector--------------------------\n",
-    "    x = x - delta_x\n",
+    "    x = x + delta_x\n",
     "    #------------------------------------------------\n",
     "    \n",
-    "print(x)    "
+    "print(\"\\n final global state estimates: \\n\", x.numpy())    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bc742e06",
+   "id": "94b5ab8f",
    "metadata": {},
    "source": [
     "# Try using Cholesky Factorization"
@@ -742,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 532,
-   "id": "59b8971b",
+   "id": "c2f6f194",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 541,
-   "id": "ce768ff8",
+   "id": "162e7418",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 542,
-   "id": "6c4633db",
+   "id": "fe8bf196",
    "metadata": {},
    "outputs": [
     {
