compiled GTSAM from source

--- a/v3/pose_graph/pose_graph_optimization.ipynb
+++ b/v3/pose_graph/pose_graph_optimization.ipynb
@@ -72,7 +72,7 @@
    "id": "e7ece94a",
    "metadata": {},
    "source": [
-    "# Pose Graph Optimization\n",
+    "# Pose Graph Optimization (Manual)\n",
     "\n",
     "### GOAL: Adjust configuration of absolute poses (nodes) to minimize squared error intorduced by constraints (edges)\n",
     "\n",
