--- a/v3/pose_graph/GTSAM_test.ipynb
+++ b/v3/pose_graph/GTSAM_test.ipynb
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05129eec",
+   "id": "4e35bfc6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -134,123 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 876,
    "id": "f7844240",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  0.     0.05   0.02   0.     0.     0.1    0.     1.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1    1.     2.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1    2.     3.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1    3.     4.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1    4.     5.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1    5.     6.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1    6.     7.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1    7.     8.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1    8.     9.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1    9.    10.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   10.    11.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   11.    12.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   12.    13.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   13.    14.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   14.    15.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   15.    16.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   16.    17.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   17.    18.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   18.    19.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   19.    20.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   20.    21.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   21.    22.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   22.    23.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   23.    24.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   24.    25.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   25.    26.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   26.    27.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   27.    28.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   28.    29.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   29.    30.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   30.    31.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   31.    32.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   32.    33.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   33.    34.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   34.    35.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   35.    36.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   36.    37.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   37.    38.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   38.    39.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   39.    40.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   40.    41.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   41.    42.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   42.    43.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   43.    44.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   44.    45.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   45.    46.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   46.    47.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   47.    48.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   48.    49.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   49.    50.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   50.    51.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   51.    52.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   52.    53.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   53.    54.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   54.    55.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   55.    56.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   56.    57.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   57.    58.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   58.    59.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   59.    60.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   60.    61.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   61.    62.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   62.    63.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   63.    64.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   64.    65.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   65.    66.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   66.    67.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   67.    68.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   68.    69.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   69.    70.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   70.    71.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   71.    72.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   72.    73.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   73.    74.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   74.    75.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   75.    76.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   76.    77.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   77.    78.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   78.    79.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   79.    80.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   80.    81.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   81.    82.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   82.    83.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   83.    84.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   84.    85.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   85.    86.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   86.    87.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   87.    88.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   88.    89.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   89.    90.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   90.    91.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   91.    92.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   92.    93.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   93.    94.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   94.    95.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   95.    96.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   96.    97.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   97.    98.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   98.    99.  ]\n",
-      " [  0.     0.05   0.02   0.     0.     0.1   99.   100.  ]]\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "#leddartech braided odometry via ICET ROS pkg ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "\n",
     "# nframes = 100\n",
-    "# odometry_history = np.load(\"test_data/leddartech_pixset/T_vec_history.npy\")[:nframes,:]\n",
-    "# pred_stds_history = np.load(\"test_data/leddartech_pixset/cov_vec_history.npy\")[:nframes,:]\n",
+    "# odometry_history = np.load(\"test_data/leddartech_pixset/T_vec_history1.npy\")[:nframes,:]\n",
+    "# pred_stds_history = np.load(\"test_data/leddartech_pixset/cov_vec_history1.npy\")[:nframes,:]\n",
     "# #debug- only use non-releated indices\n",
     "# # good_idx = np.array([0,1,3]) #,5,7])\n",
     "# # odometry_history = odometry_history[good_idx]\n",
@@ -259,41 +154,47 @@
     "\n",
     "#simplified data ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "\n",
-    "# odometry_history = np.array([[1., 0, 0, 0, 0, 0.0, 1, 2],\n",
-    "#                              [2., 1, 0, 0, 0, 0., 2, 3],\n",
-    "# #                              [2., 2, 0, 0, 0, 0., 2, 3], #conflicting measurement for frames 1 -> 2\n",
-    "#                              [3., 1, 1, 0, 0, 0., 3, 4]])\n",
+    "# odometry_history = np.array([[1., 1, 0, 0, 0, 0., 0, 1],\n",
+    "#                              [1., 1, 0, 0, 0, 0., 1, 2],\n",
+    "#                              [1., 1, 0, 0, 0, 0., 2, 3], \n",
+    "#                              [0., 1, 0, 0, 0, 0.0, 1, 4], #add conflicting measurement\n",
+    "#                              [1., 1, 0, 0, 0, 0., 3, 4] ]) \n",
+    "# ij = odometry_history[:,-2:].astype(int)\n",
+    "# print(ij)\n",
     "\n",
-    "npts = 100\n",
-    "odometry_history = np.tile(np.array([0.0, 0.05, 0.02, 0.0, 0.0, 0.1]), (npts,1))\n",
+    "npts = 500\n",
+    "odometry_history = np.tile(np.array([0.0, 0.05, 0.002, 0.0, 0.0, 0.15]), (npts,1))\n",
     "pred_stds_history = np.tile(np.array([[0.01, 0.01, 0.01, 1e-4, 1e-4, 1e-4]]), (len(odometry_history),1))\n",
     "ij = np.array([[0,1]])\n",
     "for i in range(1,len(odometry_history)):\n",
     "    ij = np.append(ij, np.array([[i, i+1]]), axis = 0)\n",
+    "\n",
+    "#mess with last constraint (add loop closure)\n",
+    "ij[-1,1] = 470 \n",
+    "# ij = np.append(np.array([[0,15]]), ij[:-1], axis = 0)\n",
+    "\n",
     "odometry_history = np.append(odometry_history, ij, axis= 1)   #match format output by ROS package\n",
     "pred_stds_history = np.append(pred_stds_history, ij, axis= 1) #match format output by ROS package\n",
-    "# print(odometry_history)\n",
+    "\n",
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-    "# print(ij)"
+    "# print(ij)\n",
+    "# print(odometry_history)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 877,
    "id": "41041561",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "converged\n",
-      "errorThreshold: 5.86200907648e-23 <? 0\n",
-      "absoluteDecrease: 1.15370388103e-18 <? 1e-05\n",
-      "relativeDecrease: 0.999949192238 <? 1e-05\n",
-      "iterations: 2 >? 100\n"
+      "initial error =  158955789401.43677\n",
+      "final error =  10539.081554046652\n"
      ]
     }
    ],
@@ -313,64 +214,69 @@
     "graph.add(gtsam.PriorFactorPose3(0, priorMean, PRIOR_NOISE)) #constrain first point at priorMean\n",
     "\n",
     "#loop through all constraints \n",
-    "# for i in range(len(ij)):\n",
-    "for i in range(int(np.max(ij))):\n",
+    "for i in range(len(ij)):\n",
+    "# for i in range(int(np.max(ij))):\n",
+    "# for i in range(1,int(np.max(ij)) + 1): #test\n",
     "    #get constraint \n",
     "    raw_odom = odometry_history[i,:-2] #omit scan indices stored at end of line\n",
-    "#     raw_odom = odometry_history[i,:]\n",
-    "#     print(\"\\n raw_odom: \\n\", raw_odom)    \n",
-    "\n",
     "    #convert to Point3 strucutre\n",
     "    point = raw_odom[:3] \n",
     "    rot = gtsam.Rot3(R_tf(raw_odom[3:]))\n",
     "    odometry_estimate = gtsam.Pose3(rot, point)\n",
     "#     print(\"\\n odometry estimate:\\n\", odometry_estimate)\n",
-    "\n",
     "    cov_estimate = gtsam.noiseModel.Diagonal.Sigmas(pred_stds_history[i,:-2])\n",
     "#     cov_estimate = gtsam.noiseModel.Diagonal.Sigmas(pred_stds_history[i,:]) #dont need to omit scan indices for fake data\n",
     "    first_idx = ij[i,0]\n",
     "    second_idx = ij[i,1] \n",
+    "#     print(first_idx, second_idx) #misses last element in ij!!!\n",
     "    graph.add(gtsam.BetweenFactorPose3(first_idx, second_idx, odometry_estimate, cov_estimate))\n",
     "\n",
     "# print(graph.size())\n",
     "#set to zero initial conditions\n",
     "initial = gtsam.Values()\n",
-    "# print(graph.size())\n",
+    "# print(initial.keys())\n",
+    "# print(\"\\n graph size:\", graph.size())\n",
     "# print(int(np.max(ij)))\n",
-    "for j in range(graph.size()):\n",
-    "# for j in range(int(np.max(ij))):\n",
+    "# for j in range(graph.size()):\n",
+    "for j in range(int(np.max(ij))+1):\n",
     "#     zero_rot = gtsam.Rot3(R_tf(np.array([0., 0., 0.])))\n",
     "#     zero_pose3 = gtsam.Pose3(zero_rot, np.array([0., 0., 0.])) #does not work with zero initial conds??\n",
+    "#     initial.insert(j, zero_pose3)\n",
     "    init_rot = gtsam.Rot3(R_tf(0.01*np.random.randn(3)))\n",
     "    init_pose = gtsam.Pose3(init_rot, np.random.randn(3))\n",
-    "    initial.insert(j, zero_pose3)\n",
+    "    initial.insert(j, init_pose)\n",
     "    \n",
     "    \n",
     "# optimize using Levenberg-Marquardt optimization\n",
-    "#for 2D\n",
-    "# params = gtsam.LevenbergMarquardtParams()\n",
-    "# optimizer = gtsam.LevenbergMarquardtOptimizer(graph, initial, params)\n",
+    "#from 2D demo - seems to work much better here\n",
+    "params = gtsam.LevenbergMarquardtParams()\n",
+    "optimizer = gtsam.LevenbergMarquardtOptimizer(graph, initial, params)\n",
     "\n",
-    "#for 3D\n",
-    "params = gtsam.GaussNewtonParams()\n",
-    "params.setVerbosity(\"Termination\")  # this will show info about stopping conds\n",
-    "optimizer = gtsam.GaussNewtonOptimizer(graph, initial, params)\n",
+    "#from 3D demo\n",
+    "# params = gtsam.GaussNewtonParams()\n",
+    "# params.setVerbosity(\"Termination\")  # this will show info about stopping conds\n",
+    "# optimizer = gtsam.GaussNewtonOptimizer(graph, initial, params)\n",
     "\n",
     "result = optimizer.optimize()\n",
+    "\n",
+    "print(\"initial error = \", graph.error(initial))\n",
+    "print(\"final error = \", graph.error(result))\n",
+    "# print(initial.keys())\n",
+    "# print(graph.keys())\n",
     "\n",
     "# print(\"\\nFinal Result:\\n{}\".format(result))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 880,
    "id": "55d8beae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "004eac609c1c48d991efe99074da27ad",
+       "model_id": "4fa02501bfc8488f99b9e512bea856c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -386,17 +292,15 @@
     "#Plot results\n",
     "plt1 = Plotter(N = 1, axes = 1, bg =(1, 1, 1), interactive = True) #ax=7 gives rulers\n",
     "disp = []\n",
-    "\n",
     "disp = plot_results(disp, result, ij)\n",
-    "\n",
     "plt1.show(disp, \"Factor Graph Test\")\n",
     "ViewInteractiveWidget(plt1.window)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
-   "id": "968321c4",
+   "execution_count": 879,
+   "id": "b0375c93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,28 +309,48 @@
     "    #plot coordinates of point centers\n",
     "    for i in range(result.size()): #loop through all elements in results\n",
     "        p = result.atPose3(i).matrix()\n",
-    "        p_center = Points([[p[0,-1], p[1,-1],  p[2,-1]]], r = 10)\n",
+    "        p_center = Points([[p[0,-1], p[1,-1],  p[2,-1]]], r = 5)\n",
     "        disp.append(p_center)\n",
-    "    \n",
+    "        #add text labels\n",
+    "        t = Text3D(i, p[:3,-1], s = 0.01, alpha = 0.3).followCamera()\n",
+    "        disp.append(t)\n",
+    "\n",
+    "        \n",
     "    #draw constraints using ij\n",
     "    for c in range(len(ij)):\n",
     "        #get coords of results i and j \n",
     "        pt1 = results.atPose3(ij[c,0]).translation()\n",
     "        pt2 = results.atPose3(ij[c,1]).translation()\n",
-    "        L = Line(p0 = pt1, p1 = pt2, lw = 3)\n",
+    "        L = Line(p0 = pt1, p1 = pt2, lw = 2)\n",
     "        disp.append(L)\n",
+    "#         print(\"\\n\",ij[c])\n",
+    "#         print(\"pt1, pt2: \\n\", pt1, pt2)\n",
     "        \n",
-    "#     print(len(ij))\n",
+    "    \n",
     "    return(disp)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 389,
    "id": "b60dd5f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R: [\n",
+      "\t0.995004165278, 0.0998334166468, 0;\n",
+      "\t-0.0998334166468, 0.995004165278, 0;\n",
+      "\t0, -0, 1\n",
+      "]\n",
+      "t: 1 2 3\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#DEBUG - [x, y, z, phi, theta, psi] -> Pose3\n",
     "t = np.array([1, 2, 3, 0.0 ,0.0 ,0.1])\n",
