wrote func to shade residulals

--- a/v3/leddartech.ipynb
+++ b/v3/leddartech.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "746cf828",
+   "id": "34c133c9",
    "metadata": {},
    "source": [
     "# Select which drive"
@@ -51,14 +51,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cbd3f37",
+   "id": "d18af893",
    "metadata": {},
    "outputs": [],
    "source": [
     "# #big hill and church:\n",
     "# drive = \"20200721_144638_part36_1956_2229\"\n",
     "\n",
-    "#straight road, narrow with pedestrians and shops \n",
+    "# straight road, narrow with pedestrians and shops \n",
     "# drive = \"20200617_191627_part12_1614_1842\"\n",
     "\n",
     "#suburban neighborhood, trees, houses and parked cars\n",
@@ -105,8 +105,8 @@
     "    data2 = pickle.load(f2)\n",
     "data2 = np.asarray(data2.tolist())[:,:3]\n",
     "\n",
-    "# data1 = data1[data1[:,2] > -0.75] #ignore ground plane\n",
-    "# data2 = data2[data2[:,2] > -0.75] #ignore ground plane"
+    "data1 = data1[data1[:,2] > -0.75] #ignore ground plane\n",
+    "data2 = data2[data2[:,2] > -0.75] #ignore ground plane"
    ]
   },
   {
@@ -120,6 +120,8 @@
    "source": [
     "plt1 = Plotter(N = 1, axes = 4, bg = (1, 1, 1), interactive = True)\n",
     "disp = []\n",
+    "\n",
+    "# data1 = data1[data1[:,2] > -0.55] #remove ground plane\n",
     "\n",
     "#draw single scan (rainbow by z height)\n",
     "zheight = 100*(np.sin(0.5*data1[:,2])+1)\n",
@@ -236,6 +238,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4de2e53e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#TEST - pioneer das api UNDISTORT FUNCTION???\n",
+    "frame = 100\n",
+    "#LeddarTech Echo sample\n",
+    "ech_sample = pf['pixell_bfc_ech'][frame]\n",
+    "point_cloud = ech_sample.get_point_cloud()\n",
+    "# print(np.shape(point_cloud))\n",
+    "\n",
+    "# Ouster PC\n",
+    "lidar_unit = pf['ouster64_bfc_xyzit'][frame]\n",
+    "print(lidar_unit.timestamp)\n",
+    "pc_undistorted = lidar_unit.get_point_cloud(undistort=True)\n",
+    "pc_distorted = lidar_unit.get_point_cloud(undistort=False)\n",
+    "print(np.shape(pc_test))\n",
+    "\n",
+    "sync = pf.synchronized()\n",
+    "print(sync)\n",
+    "\n",
+    "plt1 = Plotter(N = 1, axes = 4, bg = (1, 1, 1), interactive = True)\n",
+    "disp = []\n",
+    "\n",
+    "disp.append(Points(pc_distorted, r = 2, c = 'red'))\n",
+    "disp.append(Points(pc_undistorted, r = 2, c = 'blue'))\n",
+    "# disp.append(Points(data1, r = 5, alpha = 0.2, c = 'gray')) #What I was using\n",
+    "\n",
+    "\n",
+    "plt1.show(disp, \"Fig LedderTech\")\n",
+    "ViewInteractiveWidget(plt1.window)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9b421b39",
    "metadata": {},
    "outputs": [],
@@ -277,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d54eb8b",
+   "id": "13620dff",
    "metadata": {},
    "source": [
     "### Get LIDAR and GNSS/INS timestamps"
@@ -286,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36a8a187",
+   "id": "12d51d10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,10 +343,11 @@
     "    lidar_time[i] = np.asarray(data1.tolist())[0,-1]\n",
     "#     data1 = np.asarray(data1.tolist())[:,:3]\n",
     "# print(lidar_time[1] - lidar_time[0])\n",
-    "print(len(timestamps))\n",
+    "# print(len(timestamps))\n",
     "\n",
     "# x_hist = np.loadtxt(\"results/leddartech_ICET_estimates_v2.txt\") #old church\n",
-    "x_hist = np.loadtxt(\"results/leddartech_ICET_estimates_suburb.txt\") #suburbs"
+    "# x_hist = np.loadtxt(\"results/leddartech_ICET_estimates_suburb.txt\") #old pc gathernig method\n",
+    "x_hist = np.loadtxt(\"results/leddartech_ICET_estimates_suburb_undistorted.txt\") #new strategy"
    ]
   },
   {
@@ -365,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3b6f7f1",
+   "id": "c390df61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1659d70e",
+   "id": "eb648255",
    "metadata": {},
    "outputs": [],
    "source": [
