updated script to gen skip3 training data from leddartech

--- a/v3/leddartech.ipynb
+++ b/v3/leddartech.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "# test- raw Pixell data?\n",
     "# prefix = \"/media/derm/06EF-127D2/leddartech/20200721_144638_part36_1956_2229/pixell_bfc_ech/\" #test\n",
-    "prefix = \"/media/derm/06EF-127D2/leddartech/\" + drive + \"/pixell_bfc_ech/\" #test\n",
+    "prefix = \"/media/derm/06EF-127D3/leddartech/\" + drive + \"/pixell_bfc_ech/\" #test\n",
     "fn1 = prefix + \"00000150.pkl\"\n",
     "with open(fn1, 'rb') as f:\n",
     "    data = pickle.load(f)\n",
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "#Ouster OS1-64 mechanical LiDAR + FLIR\n",
-    "prefix = \"/media/derm/06EF-127D2/leddartech/\" + drive + \"/ouster64_bfc_xyzit/\"\n",
+    "prefix = \"/media/derm/06EF-127D3/leddartech/\" + drive + \"/ouster64_bfc_xyzit/\"\n",
     "fn1 = prefix + \"00000100.pkl\"\n",
     "with open(fn1, 'rb') as f1:\n",
     "    data1 = pickle.load(f1)\n",
@@ -105,8 +105,8 @@
     "    data2 = pickle.load(f2)\n",
     "data2 = np.asarray(data2.tolist())[:,:3]\n",
     "\n",
-    "data1 = data1[data1[:,2] > -0.75] #ignore ground plane\n",
-    "data2 = data2[data2[:,2] > -0.75] #ignore ground plane"
+    "# data1 = data1[data1[:,2] > -0.75] #ignore ground plane\n",
+    "# data2 = data2[data2[:,2] > -0.75] #ignore ground plane"
    ]
   },
   {
@@ -127,7 +127,7 @@
     "zheight = 100*(np.sin(0.5*data1[:,2])+1)\n",
     "cname = np.array([zheight, 100*(np.sin(0.5*data1[:,2]+256)+1), 128*np.ones(len(zheight))]).T.tolist()\n",
     "print(zheight)\n",
-    "points_object1 = Points(data1, c = cname, r = 3, alpha = 0.5)\n",
+    "points_object1 = Points(data1, c = cname, r = 2.5, alpha = 0.5)\n",
     "disp.append(points_object1)\n",
     "\n",
     "# disp.append(Points(data1, c = 'red', r = 2.5, alpha = 1))\n",
