starting  notebook to fix rotation distortion

--- a/v3/perspective_shift/Perspective Shift Identification.ipynb
+++ b/v3/perspective_shift/Perspective Shift Identification.ipynb
@@ -99,7 +99,7 @@
     "print(gpus)\n",
     "if gpus:\n",
     "  try:\n",
-    "    memlim = 16*1024\n",
+    "    memlim = 12*1024\n",
     "#     memlim = 8*1024\n",
     "    tf.config.experimental.set_virtual_device_configuration(gpus[0], [tf.config.experimental.VirtualDeviceConfiguration(memory_limit=memlim)])\n",
     "  except RuntimeError as e:\n",
@@ -310,33 +310,33 @@
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "\n",
     "# # leddartech\n",
-    "d1 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/church_scan1_100pts.npy\")\n",
-    "d2 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/church_scan2_100pts.npy\")\n",
-    "gt = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/church_ground_truth_100pts.npy\")\n",
-    "d1_2 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/suburban_scan1_100pts.npy\")\n",
-    "d2_2 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/suburban_scan2_100pts.npy\")\n",
-    "gt_2 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/suburban_ground_truth_100pts.npy\")\n",
-    "d1 = np.append(d1, d1_2, axis = 0)\n",
-    "d2 = np.append(d2, d2_2, axis = 0)\n",
-    "gt = np.append(gt, gt_2, axis = 0)\n",
-    "d1_3 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/shops_scan1_100pts.npy\")\n",
-    "d2_3 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/shops_scan2_100pts.npy\")\n",
-    "gt_3 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/shops_ground_truth_100pts.npy\")\n",
-    "d1 = np.append(d1, d1_3, axis = 0)\n",
-    "d2 = np.append(d2, d2_3, axis = 0)\n",
-    "gt = np.append(gt, gt_3, axis = 0)\n",
-    "d1_4 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/bikelane_scan1_100pts.npy\")\n",
-    "d2_4 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/bikelane_scan2_100pts.npy\")\n",
-    "gt_4 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/bikelane_ground_truth_100pts.npy\")\n",
-    "d1 = np.append(d1, d1_4, axis = 0)\n",
-    "d2 = np.append(d2, d2_4, axis = 0)\n",
-    "gt = np.append(gt, gt_4, axis = 0)\n",
-    "d1_5 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/jaywalker_scan1_100pts.npy\")\n",
-    "d2_5 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/jaywalker_scan2_100pts.npy\")\n",
-    "gt_5 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/jaywalker_ground_truth_100pts.npy\")\n",
-    "d1 = np.append(d1, d1_5, axis = 0)\n",
-    "d2 = np.append(d2, d2_5, axis = 0)\n",
-    "gt = np.append(gt, gt_5, axis = 0)\n",
+    "# d1 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/church_scan1_100pts.npy\")\n",
+    "# d2 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/church_scan2_100pts.npy\")\n",
+    "# gt = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/church_ground_truth_100pts.npy\")\n",
+    "# d1_2 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/suburban_scan1_100pts.npy\")\n",
+    "# d2_2 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/suburban_scan2_100pts.npy\")\n",
+    "# gt_2 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/suburban_ground_truth_100pts.npy\")\n",
+    "# d1 = np.append(d1, d1_2, axis = 0)\n",
+    "# d2 = np.append(d2, d2_2, axis = 0)\n",
+    "# gt = np.append(gt, gt_2, axis = 0)\n",
+    "# d1_3 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/shops_scan1_100pts.npy\")\n",
+    "# d2_3 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/shops_scan2_100pts.npy\")\n",
+    "# gt_3 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/shops_ground_truth_100pts.npy\")\n",
+    "# d1 = np.append(d1, d1_3, axis = 0)\n",
+    "# d2 = np.append(d2, d2_3, axis = 0)\n",
+    "# gt = np.append(gt, gt_3, axis = 0)\n",
+    "# d1_4 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/bikelane_scan1_100pts.npy\")\n",
+    "# d2_4 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/bikelane_scan2_100pts.npy\")\n",
+    "# gt_4 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/bikelane_ground_truth_100pts.npy\")\n",
+    "# d1 = np.append(d1, d1_4, axis = 0)\n",
+    "# d2 = np.append(d2, d2_4, axis = 0)\n",
+    "# gt = np.append(gt, gt_4, axis = 0)\n",
+    "# d1_5 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/jaywalker_scan1_100pts.npy\")\n",
+    "# d2_5 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/jaywalker_scan2_100pts.npy\")\n",
+    "# gt_5 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/jaywalker_ground_truth_100pts.npy\")\n",
+    "# d1 = np.append(d1, d1_5, axis = 0)\n",
+    "# d2 = np.append(d2, d2_5, axis = 0)\n",
+    "# gt = np.append(gt, gt_5, axis = 0)\n",
     "# d1_6 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/rainy_scan1_100pts.npy\")\n",
     "# d2_6 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/rainy_scan2_100pts.npy\")\n",
     "# gt_6 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/rainy_ground_truth_100pts.npy\")\n",
@@ -351,12 +351,12 @@
     "# gt = np.append(gt, gt_7, axis = 0)\n",
     "\n",
     "#add in some modelnet40\n",
-    "d1_5 = np.load(\"/media/derm/06EF-127D3/TrainingData/ModelNet40/100pts_scan1_320k.npy\")\n",
-    "d2_5 = np.load(\"/media/derm/06EF-127D3/TrainingData/ModelNet40/100pts_scan2_320k.npy\")\n",
-    "gt_5 = np.load(\"/media/derm/06EF-127D3/TrainingData/ModelNet40/100pts_ground_truth_320k.npy\")\n",
-    "d1 = np.append(d1, d1_5, axis = 0)\n",
-    "d2 = np.append(d2, d2_5, axis = 0)\n",
-    "gt = np.append(gt, gt_5, axis = 0)\n",
+    "d1 = np.load(\"/media/derm/06EF-127D3/TrainingData/ModelNet40/100pts_scan1_320k.npy\")\n",
+    "d2 = np.load(\"/media/derm/06EF-127D3/TrainingData/ModelNet40/100pts_scan2_320k.npy\")\n",
+    "gt = np.load(\"/media/derm/06EF-127D3/TrainingData/ModelNet40/100pts_ground_truth_320k.npy\")\n",
+    "# d1 = np.append(d1, d1_5, axis = 0)\n",
+    "# d2 = np.append(d2, d2_5, axis = 0)\n",
+    "# gt = np.append(gt, gt_5, axis = 0)\n",
     "\n",
     "#skip3's\n",
     "d1_2 = np.load(\"/media/derm/06EF-127D3/TrainingData/leddartech/churchSkip3_scan1_100pts.npy\")\n",
@@ -727,7 +727,7 @@
     "\n",
     "    return points, gt\n",
     "\n",
-    "BATCH_SIZE =  256\n",
+    "BATCH_SIZE =  128\n",
     "\n",
     "train_dataset = tf.data.Dataset.from_tensor_slices((x_train, y_train))\n",
     "train_dataset = train_dataset.shuffle(len(x_train)).map(augment).batch(BATCH_SIZE)\n",
@@ -752,7 +752,9 @@
     "| 0.0311 MAE  | 1024   | 100    | KITTI(5,91,95,117)x50pts| Extended PCR-NET| KITTInet |\n",
     "| 0.0478 MAE  | 1024   | 64    | KITTI(5,91,95,117, 71)x50pts| Extended PCR-NET|  |\n",
     "| |  | |LeddarTech    | | |\n",
-    "| 0.0578 MAE  | 256   | 64    | 727k x 100 pts| NET |  |"
+    "| 0.0578 MAE  | 256   | 64    | 727k x 100 pts| NET |  |\n",
+    "| 0.0677 MAE  | 256   | 128    | 500k skip3 + MN40 x 100 pts| PCR-NET |  |\n",
+    "| 0.0612 MAE  | 128   | 512    | 500k skip3 + MN40 x 100 pts| adam optim | leddarNet.kmod |"
    ]
   },
   {
@@ -770,7 +772,7 @@
    },
    "outputs": [],
    "source": [
-    "from network import Net\n",
+    "from network import Net #smaller\n",
     "# from network import smallNet as Net #for basic uniformly sampled surfaces\n",
     "# from network import TestNet as Net #what Sarode used\n",
     "# from network import LUT_test as Net\n",
@@ -778,7 +780,7 @@
     "# from network import PointNet as Net\n",
     "# from network import Attention as Net\n",
     "\n",
-    "runLen = 128\n",
+    "runLen = 512\n",
     "\n",
     "def scheduler(epoch, learning_rate):\n",
     "    part1 = runLen//4\n",
@@ -814,7 +816,7 @@
     "\n",
     "#using tf.data() pipeline instead of simply feeding in np arrays\n",
     "trace = model.fit(train_dataset, epochs=runLen, validation_data = val_dataset, \n",
-    "                  verbose=1, callbacks = [cp, scheduler])\n",
+    "                  verbose=1, callbacks = [cp]) #scheduler\n",
     "\n",
     "#test- see if network can learn LUT\n",
     "# trace = model.fit(x = x_train, y = compact, batch_size = 2048, epochs=runLen, verbose=1, \n",
@@ -939,7 +941,7 @@
     "#visualize results of network on test data\n",
     "#2d plots (x and y only)\n",
     "fig1, ax1 = plt.subplots()\n",
-    "n = int(np.floor(1000*np.random.rand()))\n",
+    "n = int(np.floor(10000*np.random.rand()))\n",
     "# n = 276 #sample number (from x_test)\n",
     "\n",
     "print(\"n = \", n)\n",
